# libLunaEsp32

./: .gitignore  .gitmodules  ATX.cpp  AsioTcpInputOutput.cpp  AsioTimer.cpp  AsioUdpInputOutput.cpp  CMakeLists.txt  ConstantGenerator.cpp  ConstantMqttEffect.cpp  ControlChannel.cpp  ControlChannel.hpp  Controller.cpp  Controller.hpp  DirectService.cpp  DiscoveryResponder.cpp  DiscoveryResponder.hpp  EffectsPlugin.cpp  FlameGenerator.cpp  FlameMqttEffect.cpp  HardwareController.cpp  IdleService.cpp  Infrared.cpp  Ir40ButtonRemote.cpp  Luna.cpp  Main.cpp  Manager.cpp  MqttClient.cpp  MqttPlugin.cpp  MqttService.cpp  NetworkManager.cpp  Noise.cpp  Nvs.cpp  OnlineContext.cpp  PWM.cpp  PWMLight.cpp  PersistencyPlugin.cpp  PlasmaGenerator.cpp  PlasmaMqttEffect.cpp  README.md  RealtimeController.cpp  (+14 more)
core/: CMakeLists.txt  Configurable.cpp  Controller.cpp  ControllerMux.cpp  EventLoop.cpp  IdleController.cpp  IdleService.cpp  Property.cpp  Service.cpp  ServiceManager.cpp  TlsConfiguration.cpp
core/include/luna/: Configurable.hpp  Controller.hpp  ControllerMux.hpp  Device.hpp  ElectricalLoad.hpp  EventLoop.hpp  Generator.hpp  HardwareController.hpp  IdleController.hpp  IdleService.hpp  Location.hpp  LunaContext.hpp  LunaInterface.hpp  MemberProperty.hpp  Mutex.hpp  NetworkManagerConfiguration.hpp  NetworkService.hpp  NetworkingContext.hpp  Plugin.hpp  Point.hpp  Property.hpp  Service.hpp  ServiceManager.hpp  Strand.hpp  TlsConfiguration.hpp  TlsCredentials.hpp  ValueProperty.hpp
driver/: ATX.cpp  CMakeLists.txt  HardPWM.cpp  PWM.cpp  PWMLight.cpp  SoftPWM.cpp  StrandWS281x.cpp  WS281xMeter.cpp
driver/include/luna/: ATX.hpp  GPIO.hpp  HardPWM.hpp  PWM.hpp  PWMLight.hpp  SoftPWM.hpp  StrandWS281x.hpp  WS281xMeter.hpp
generators/: CMakeLists.txt  ConstantEffect.cpp  ConstantGenerator.cpp  Effect.cpp  EffectEngine.cpp  EffectMixer.cpp  EffectPlugin.cpp  EffectSet.cpp  FlameEffect.cpp  FlameGenerator.cpp  InterpolatingGenerator.cpp  Noise.cpp  PlasmaEffect.cpp  PlasmaGenerator.cpp
generators/include/luna/: ConstantEffect.hpp  ConstantGenerator.hpp  Effect.hpp  EffectEngine.hpp  EffectMixer.hpp  EffectPlugin.hpp  EffectSet.hpp  FlameEffect.hpp  FlameGenerator.hpp  InterpolatingGenerator.hpp  Noise.hpp  PlasmaEffect.hpp  PlasmaGenerator.hpp
include/luna/: AsioTimer.hpp  AsioUdpInputOutput.hpp  Configuration.hpp  DirectService.hpp  DiscoveryResponder.hpp  EffectsPlugin.hpp  IdleService.hpp  Infrared.hpp  InfraredDispatcher.hpp  Ir40ButtonRemote.hpp  Luna.hpp  Main.hpp  MqttPlugin.hpp  NetworkManager.hpp  Nvs.hpp  OnlineContext.hpp  PersistencyPlugin.hpp  RealtimePlugin.hpp  RealtimeService.hpp  TlsConfiguration.hpp  UpdatePlugin.hpp  Updater.hpp  WiFi.hpp  WifiCredentials.hpp
include/luna/esp32/: ATX.hpp  AsioTcpInputOutput.hpp  AsioTimer.hpp  AsioUdpInputOutput.hpp  BitDepth.hpp  ColorChannels.hpp  ColorSpace.hpp  ConstantGenerator.hpp  ConstantMqttEffect.hpp  ControlChannelConfig.hpp  ElectricalLoad.hpp  FlameGenerator.hpp  FlameMqttEffect.hpp  GPIO.hpp  Generator.hpp  HardwareController.hpp  IdleService.hpp  InterpolatingGenerator.hpp  Located.hpp  Location.hpp  Manager.hpp  Metered.hpp  MqttClient.hpp  MqttEffect.hpp  MqttService.hpp  MqttTopic.hpp  NetworkManager.hpp  Outputs.hpp  PWM.hpp  PWMLight.hpp  Parse.hpp  PlasmaGenerator.hpp  PlasmaMqttEffect.hpp  Point.hpp  RGB.hpp  RealtimeController.hpp  RealtimeService.hpp  Service.hpp  ServiceManager.hpp  Strand.hpp  (+6 more)
infrared/: CMakeLists.txt  Ir40ButtonRemote.cpp
infrared/include/luna/: Ir40ButtonRemote.hpp
lwip_async/: AsioTcpInputOutput.cpp  AsioTcpInputOutput.hpp  CMakeLists.txt  DtlsInputOutput.cpp  DtlsInputOutput.hpp  PbufStream.cpp  PbufStream.hpp  StreamObserver.hpp  Timer.cpp  Timer.hpp  TlsInputOutput.cpp  TlsInputOutput.hpp
mbedtls-cpp/: BasicInputOutput.hpp  CMakeLists.txt  Certificate.hpp  Cookie.hpp  CounterDeterministicRandomGenerator.hpp  Entropy.hpp  Exception.cpp  PrivateKey.hpp  RandomGenerator.hpp  SocketInputOutput.hpp  Ssl.hpp  StandardCookie.hpp  StandardEntropy.hpp  StandardTimer.hpp  Timer.hpp
mbedtls-cpp/include/mbedtls-cpp/: Certificate.hpp  Configuration.hpp  CounterDeterministicRandomGenerator.hpp  Exception.hpp  PrivateKey.hpp  SocketInputOutput.hpp  Ssl.hpp
mqtt/: CMakeLists.txt  Client.cpp  Client.hpp  Codec.cpp  Codec.hpp  Configurable.cpp  ConstantEffect.cpp  ConstantMqttEffect.cpp  Controller.cpp  Controller.hpp  Effect.cpp  EffectMixer.cpp  FlameEffect.cpp  FlameMqttEffect.cpp  MqttClient.cpp  MqttEffect.cpp  MqttPlugin.cpp  MqttService.cpp  Parse.hpp  PlasmaEffect.cpp  PlasmaMqttEffect.cpp  Service.cpp  Subscription.cpp  Subscription.hpp  Topic.cpp
mqtt/include/luna/: ConstantMqttEffect.hpp  EffectMixer.hpp  FlameMqttEffect.hpp  MqttClient.hpp  MqttConfigurable.hpp  MqttEffect.hpp  MqttPlugin.hpp  MqttService.hpp  MqttTopic.hpp  PlasmaMqttEffect.hpp
mqtt/include/luna/mqtt/: Client.hpp  Configurable.hpp  ConstantEffect.hpp  Controller.hpp  Effect.hpp  EffectMixer.hpp  FlameEffect.hpp  MqttPlugin.hpp  PlasmaEffect.hpp  Property.hpp  Service.hpp  Subscription.hpp  Topic.hpp
realtime/: CMakeLists.txt  DirectController.cpp  DirectController.hpp  RealtimePlugin.cpp  RealtimeStreamer.cpp
realtime/include/luna/: DirectController.hpp  RealtimeStreamer.hpp
update/: AsioTcpInputOutput.hpp  CMakeLists.txt  UpdatePlugin.cpp  UpdaterAsio.cpp  UpdaterAsio.hpp  UpdaterSocket.cpp  UpdaterSocket.hpp
